msr-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msr-app
  labels:
    app: msr-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msr-app
  template:
    metadata:
      labels:
        app: msr-app
    spec:
      containers:
      - name: msr-app
        image: sasidharmsr/msr:1.43 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: msr-app-service
spec:
  selector:
    app: msr-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30043
