ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msr-ingress

spec:
  rules:
    - host: msr-app
      http:
        paths:
          - pathType: Prefix
            path: "/lets-code"
            backend:
              service:
                name: msr-app-service
                port:
                  number: 8080



##http://msr-app/lets-code


os
cn basics
microservices basic
solid princeples
kubernates
dns
loadbalencers
tls (http descr/encryp)
